<resources>
    <string name="app_name2">DigitLog</string>
    <string name="app_name">TextInputLayout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="Trip"><u>TRIP</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter the data</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_full_data">full_data</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pmax">Maximum Limit Exceeded !</string>
    <string name="pmin">Below Minimum Limit !</string>
    <string name="phh">High High Alarm !</string>
    <string name="pll">Low Low Alarm !</string>
    <string name="p1">Lube Oil Pressure Bearing Header MPa</string>
    <string name="p2">Lube Oil Pressure Discharge Aux Pump MPa</string>
    <string name="p3">Lube Oil Pressure Discharge Emer. Pump MPa</string>
    <string name="p4">Lube Oil Pressure Discharge Main Pump MPa</string>
    <string name="p5">Compressor Discharge Air Pressure MPa</string>
    <string name="p6">Hydraulic Supply Pressure Lube MPa</string>
    <string name="p7">Trip Oil Pressure Gas Fuel Stop Valve MPa</string>
    <string name="p8">Trip Oil Pressure Liquid Fuel Stop Valve MPa</string>
    <string name="p9">Automizing Air Pressure Mainfold MPa</string>
    <string name="p10">Cooling Water Pressure. Water Feed Header MPa</string>
    <string name="p11">Lube Oil Pressure Defferential Main Filter KgCm2</string>
    <string name="p12">Lube Oil Pressure Defferential Control Oil Filter KgCm2</string>
    <string name="p13">Hydraulic Supply Pressure Defferential Filter KgCm2</string>
    <string name="p14">Hydraulic Supply Pressure Defferential Filter KgCm2</string>
    <string name="p15">Liquid Fuel Flow KG/SEC</string>
    <string name="p16">Pressure Defferential LP Filter KgCm2</string>
    <string name="p17">Air Filter Differentail Pressure KPa</string>
    <string name="p18">Dicsant Air Pressure Before Regulator MPa</string>
    <string name="p19">Dicsant Air Pressure After Regulator MPa</string>
    <string name="p20">Dicsant Air Pressure Supplay to Air Pressure MPa</string>
    <string name="p21">Seal Air Fan Running</string>
    <string name="pp1">HP. Liquid Fuel Diff Pressure Mpa</string>
    <string name="pp2">Liquid Fuel Pressure After Filter KgCm3</string>
    <string name="pp3">Liquid Fuel Duplix Filter DiffPressure Bar</string>
    <string name="pp4">Liquid Fuel After Duplix Filter (Black) Bar</string>
    <string name="pp5">Liquid Fuel Nozzel No.1 Pressure MPa</string>
    <string name="pp6">Liquid Fuel Nozzel No.2 Pressure MPa</string>
    <string name="pp7">Liquid Fuel Nozzel No.3 Pressure MPa</string>
    <string name="pp8">Liquid Fuel Nozzel No.4 Pressure MPa</string>
    <string name="pp9">Liquid Fuel Nozzel No.5 Pressure MPa</string>
    <string name="pp10">Liquid Fuel Nozzel No.6 Pressure MPa</string>
    <string name="pp11">Liquid Fuel Nozzel No.7 Pressure MPa</string>
    <string name="pp12">Liquid Fuel Nozzel No.8 Pressure MPa</string>
    <string name="pp13">Liquid Fuel Nozzel No.9 Pressure MPa</string>
    <string name="pp14">Liquid Fuel Nozzel No.10 Pressure MPa</string>
    <string name="pp15">Liquid Fuel Nozzel No.12 Pressure MPa</string>
    <string name="pp16">Lube Oil Tank Temperature C</string>
    <string name="pp17">Lube Oil Level Tank</string>
    <string name="pp18">Cooling Water Outelt Temperature C</string>
    <string name="pp19">LO Pressure at Generator MPa</string>
    <string name="pp20">LO Return Pressure at Outside Reducing Gear 100 x KPa</string>
    <string name="pp21">LO Return Pressure at Lube Oil Tank 100 x KPa</string>
    <string name="gp1">Phase A Current Amp</string>
    <string name="gp2">Phase B Current Amp</string>
    <string name="gp3">Phase C Current Amp</string>
    <string name="gp4">Excitation Voltage VOLT</string>
    <string name="gp5">System Voltage VOLT</string>
    <string name="gp6">Generator Voltage VOLT</string>
    <string name="gp7">Generator MW</string>
    <string name="gp8">Excitation Current AMP</string>
    <string name="gp9">System Frequency Hz</string>
    <string name="gp10">Generator MVAR</string>
    <string name="gp11">Excitation Output Balance mA</string>
    <string name="gp12">Gen Zero Sequence Voltage VOLT</string>
    <string name="gp13">Power Factor</string>
    <string name="gp14">Gen Energy Meter Reading Kw-Hr</string>
    <string name="gp15">Gen KVAR Meter Reading Kvar-Hr</string>
    <string name="gp16">120/DC SWG Voltage VOLT</string>
    <string name="gg1">Load MW</string>
    <string name="gg2">Stator Temp No. 0 C</string>
    <string name="gg3">Stator Temp No. 1 C</string>
    <string name="gg4">Stator Temp No. 2 C</string>
    <string name="gg5">Stator Temp No. 3 C</string>
    <string name="gg6">Stator Temp No. 4 C</string>
    <string name="gg7">Stator Temp No. 5 C</string>
    <string name="gg8">Stator Temp No. 6 C</string>
    <string name="gg9">Stator Temp No. 7 C</string>
    <string name="gg10">Stator Temp No. 8 C</string>
    <string name="gg11">Inlet Air Temperature Drive End of Gen No. 9 C</string>
    <string name="gg12">Inlet Air Temperature Non-Drive End of Gen No. 10 C</string>
    <string name="gg13">Outlet Air Temperature of Gen No. 11 C</string>
    <string name="gg14">Outlet Air Temperature of Gen No. 12 C</string>
    <string name="gg15">GIA Amp</string>
    <string name="gg16">GIB Amp</string>
    <string name="gg17">GIC Amp</string>
    <string name="gg18">DVX V</string>
    <string name="gg19">SVLX V</string>
    <string name="gg20">GAVRI Amp</string>
    <string name="gg21">GAVRV V</string>
    <string name="mp1">Turbine Speed TNH (%)</string>
    <string name="mp2">Turbine Speen TNH (RPM)</string>
    <string name="mp3">Generator Output DWATT (MW)</string>
    <string name="mp4">Generator (MVAR)</string>
    <string name="mp5">FSR (%)</string>
    <string name="mp6">Inlet Air Temp CTIF (C)</string>
    <string name="mp7">Compressor Discharge Pressure CPD (Bar)</string>
    <string name="mp8">Compressor Discharge Temp CTDA (C)</string>
    <string name="mp9">IGV Position GSGV (Deg)</string>
    <string name="mp10">Maximum Vibration BB_MAX Trip(mm/s)</string>
    <string name="mp11">Max Bearing Metal Temp LTB (C)</string>
    <string name="mp12">Avg Wheel Space Temp TTWS (C)</string>
    <string name="mp13">Avg Exhaust Temp TTXM (C)</string>
    <string name="mp14">Exhaust Allow Temp TTXSPL (C)</string>
    <string name="mp15">Exhaust Speed Temp TTXSP1 (C)</string>
    <string name="mp16">Exhaust Speed Temp TTXSP2 (C)</string>
    <string name="mp17">Exhaust Speed Temp TTXSP3 (C)</string>
    <string name="mp18">Liquid Fuel Flow FQLM (Kg/Sec)</string>
    <string name="mp19">Lube Oil Header Temperature LTTH Trip 8C (C)</string>
    <string name="p61">BB1 Vibration (mm/sec)</string>
    <string name="p62">BB2 Vibration (mm/sec)</string>
    <string name="p63">BB4 Vibration (mm/sec)</string>
    <string name="p64">BB5 Vibration (mm/sec)</string>
    <string name="p65">BB10 Vibration (mm/sec)</string>
    <string name="p66">BB11 Vibration (mm/sec)</string>
    <string name="p67">BB12 Vibration (mm/sec)</string>
    <string name="p68">Ambient Temperature Precooler (C)</string>
    <string name="p69">Conductivity</string>
    <string name="p610">Temp After Cooler (C)</string>
    <string name="p611">Inlet Air Temp CTIFIA (C)</string>
    <string name="p612">Turbine Leg Temperature (C)</string>
    <string name="p613">Demin Water Tank Level (m)</string>
    <string name="p614">LDO Pressure (Bar)</string>
    <string name="p615">HCGO Pressure After Filter (Bar)</string>
    <string name="p616">HCGO Dupler Filter Difilter Pressure (Bar)</string>
    <string name="p617">HCGO Temperature (C)</string>
    <string name="p618">Three Way V/V Position (%)</string>
    <string name="sp2">(A) Water Level HP Drum mm</string>
    <string name="sp3">(A) Water Level LP Drum mm</string>
    <string name="sp4">(A) Drum Pressure HP Mpa</string>
    <string name="sp5">(A) Drum Pressure LP Mpa</string>
    <string name="sp6">(A) HP Feed Water Pressure Mpa</string>
    <string name="sp7">(A) HP Feed Water Flow T/h</string>
    <string name="sp8">(A) LP Feed Water Pressure Mpa</string>
    <string name="sp9">(A) LP Feed Water Flow T/h</string>
    <string name="sp10">(A) Detemp Water Opening Perc %</string>
    <string name="sp11">(A) LP Steam CV Open Perc %</string>
    <string name="sp12">(A) LP Steam Pressure Mpa</string>
    <string name="sp13">(A) 85 M Tank Level mm</string>
    <string name="sp14">(A) CCCW Water Level mm</string>
    <string name="sp15">(A) Dearetor Pressrue Mpa</string>
    <string name="sp16">(A) Dearetor Outlet Temp C</string>
    <string name="sp17">(A) Dearetor Water Level mm</string>
    <string name="sp18">(A) Circulating Water Inlet Temp C</string>
    <string name="sp19">(A) Circulating Water Inlet Pressure Mpa</string>
    <string name="sp20">(A) Cooling Air Inlet C</string>
    <string name="sp21">(A) Cooling Air Outer C</string>
    <string name="sp22">(A) Generator Stator Temperature Max C</string>
    <string name="qsp2">(B) Water Level HP Drum mm</string>
    <string name="qsp3">(B) Water Level LP Drum mm</string>
    <string name="qsp4">(B) Drum Pressure HP Mpa</string>
    <string name="qsp5">(B) Drum Pressure LP Mpa</string>
    <string name="qsp6">(B) HP Feed Water Pressure Mpa</string>
    <string name="qsp7">(B) HP Feed Water Flow T/h</string>
    <string name="qsp8">(B) LP Feed Water Pressure Mpa</string>
    <string name="qsp9">(B) LP Feed Water Flow T/h</string>
    <string name="qsp10">(B) Detemp Water Opening Perc %</string>
    <string name="qsp11">(B) LP Steam CV Open Perc %</string>
    <string name="qsp12">(B) LP Steam Pressure Mpa</string>
    <string name="qsp13">(B) 85 M Tank Level mm</string>
    <string name="qsp14">(B) CCCW Water Level mm</string>
    <string name="qsp15">(B) Dearetor Pressrue Mpa</string>
    <string name="qsp16">(B) Dearetor Outlet Temp C</string>
    <string name="qsp17">(B) Dearetor Water Level mm</string>
    <string name="qsp18">(B) Circulating Water Inlet Temp C</string>
    <string name="qsp19">(B) Circulating Water Inlet Pressure Mpa</string>
    <string name="qsp20">(B) Cooling Air Inlet C</string>
    <string name="qsp21">(B) Cooling Air Outer C</string>
    <string name="qsp22">(B) Generator Stator Temperature Max C</string>
    <string name="ssp1">Load Mw</string>
    <string name="ssp2">Freq Hz</string>
    <string name="ssp3">Speed RPM</string>
    <string name="ssp4">Min Stop Valve Position %</string>
    <string name="ssp5">Min Steam Pressure Mpa</string>
    <string name="ssp6">Min Steam Temperature C</string>
    <string name="ssp7">Min Steam Flow T/h</string>
    <string name="ssp8">Eth Temperature C</string>
    <string name="ssp9">Condenser Vacuum Pressure Mpa</string>
    <string name="ssp10">Condenser Water Level mm</string>
    <string name="ssp11">Rear Speed Stage Pressure Mpa</string>
    <string name="ssp12">Average Pressure Tank Pressure Mpa</string>
    <string name="ssp13">Average Pressure Tank Temperature C</string>
    <string name="ssp14">Condensate Water System Pressure Mpa</string>
</resources>